.helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: werf-first-app
spec:
  selector:
    app: werf-first-app
  ports:
    - name: http
      port: 3000
