.helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: werf-first-app
spec:
  rules:
    - host: werf-first-app.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: werf-first-app
                port:
                  number: 3000
